# Potentia

./: .gitignore  README.md  platformio.ini
lib/Cobalt/: CHANGELOG.md  CMakeLists.txt  README.md
lib/Cobalt/include/cobalt/: cobalt.hpp
lib/Cobalt/include/cobalt/control/: control.hpp
lib/Cobalt/include/cobalt/control/controller/: controller.hpp  pid.hpp
lib/Cobalt/include/cobalt/hal/: hal.hpp
lib/Cobalt/include/cobalt/hal/gpio/: gpio_arduino.hpp  gpio_base.hpp  gpio_espidf.hpp
lib/Cobalt/include/cobalt/hal/i2c/: i2c_arduino.hpp  i2c_base.hpp  i2c_espidf.hpp
lib/Cobalt/include/cobalt/math/: math.hpp
lib/Cobalt/include/cobalt/math/algebra/: algebra.hpp
lib/Cobalt/include/cobalt/math/algebra/complex/: complex.hpp  complex_ops.hpp  complex_util.hpp
lib/Cobalt/include/cobalt/math/geometry/: geometry.hpp
lib/Cobalt/include/cobalt/math/geometry/quaternion/: quaternion.hpp  quaternion_ops.hpp  quaternion_util.hpp
lib/Cobalt/include/cobalt/math/geometry/transform/: transform.hpp  transform_ops.hpp  transform_util.hpp
lib/Cobalt/include/cobalt/math/linear_algebra/: linear_algebra.hpp
lib/Cobalt/include/cobalt/math/linear_algebra/matrix/: matrix.hpp  matrix_ops.hpp  matrix_util.hpp
lib/Cobalt/include/cobalt/math/linear_algebra/vector/: vector.hpp  vector_ops.hpp  vector_util.hpp
lib/Cobalt/src/control/controller/: pid.cpp
lib/Cobalt/src/hal/gpio/: gpio_arduino.cpp  gpio_espidf.cpp
lib/Cobalt/src/hal/i2c/: i2c_arduino.cpp  i2c_espidf.cpp
src/: main.cpp
